deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deploy
  labels:
   app: mongodb
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:latest
        ports:
        - containerPort: 27017
