mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: my-sql
  labels:
    app: my-sql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-sql
  template:
    metadata:
      labels:
        app: my-sql
    spec:
      containers:
      - name: my-sql
        image: mysql:5.7
        ports:
        - containerPort: 3306
        voulumeMounts:
        - name: mysql-storage
          path: /var/lib/sql
