ngnix_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ngnix-deploy
  labels: 
    app: ngnix
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ngnix
  template:
    metadata: 
      labels:
        app: ngnix
    spec:
      containers:
      - name: ngnix
        image: nginx:latest
        ports:
        - containerPort: 80
