result.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"ngnix"},"name":"ngnix-deploy","namespace":"default"},"spec":{"replicas":2,"selector":{"matchLabels":{"app":"ngnix"}},"template":{"metadata":{"labels":{"app":"ngnix"}},"spec":{"containers":[{"image":"nginx:latest","name":"ngnix","ports":[{"containerPort":8080}]}]}}}}
  creationTimestamp: "2025-02-19T10:01:53Z"
  generation: 1
  labels:
    app: ngnix
  name: ngnix-deploy
  namespace: default
  resourceVersion: "11699"
  uid: 9b9629c8-2160-4540-8a52-f025695f7974
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: ngnix
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ngnix
    spec:
      containers:
      - image: nginx:latest
        imagePullPolicy: Always
        name: ngnix
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 2
  conditions:
  - lastTransitionTime: "2025-02-19T10:02:32Z"
    lastUpdateTime: "2025-02-19T10:02:32Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2025-02-19T10:01:53Z"
    lastUpdateTime: "2025-02-19T10:02:32Z"
    message: ReplicaSet "ngnix-deploy-7ff445c875" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 2
  replicas: 2
  updatedReplicas: 2
