mongoexpress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monogo-express
  labels:
    app: mongo-express
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
      - name: monogo-express
        image: mongo-express:latest
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata: 
  name: monogo-service-exp
  labels:
    app: monogo-express
spec:
  selector:
    app: mongo-express
  type: LoadBalancer
  ports:
  - port: 8081
    targetPort: 8081
    nodePort: 30000
