mysql-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: mysql-service
  labels:
    app: my-sql
spec:
  selector:
    app: my-sql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  clusterIP: None
