ngnix-service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: ngnix-service
spec:
  selector:
    app: ngnix
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
