ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ngnix-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  -  host: myapp.local
     http:
       paths:
         - path: /
           backend:
             service:
               name: ngnix-service
               Port: 
                 number: 80
